[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/cuttledog/cuttledog_baby/sprites/side_default/cuttledog_baby.png" type="Texture" id=1]
[ext_resource path="res://entities/cuttledog/cuttledog_baby/cuttledog_baby.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.9995
height = 40.1685

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "side_sleep",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "side_hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "side_default",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "side_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "side_attack",
"speed": 5.0
} ]

[node name="fluffilus_baby" type="KinematicBody2D"]
collision_layer = 34
collision_mask = 2147483649
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -8 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -46 )
frames = SubResource( 2 )
animation = "side_attack"

[node name="energyandlife" type="Timer" parent="."]
autostart = true

[node name="info_button" type="TextureButton" parent="."]
margin_left = -39.0
margin_top = -87.0
margin_right = 36.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="energyandlife" to="." method="_on_energyandlife_timeout"]
[connection signal="pressed" from="info_button" to="." method="_on_info_button_pressed"]
